--- a/style.css
+++ b/style.css
@@ -3,4 +3,6 @@ h1{
 }
 p{
       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-weight: 900;
+      color: red;
 }
